--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <!-- acting like universal tag for my page -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UDIE STEPHEN UDIE | WDD 130</title>  
+    <meta name="description" content="Stephen Udie, the course, BYU-idaho Wdd 130 course home page.">  
+    <meta name="author" content="Stephen Udie" >      
+    <title>UDIE STEPHEN UDIE | WDD 130</title>
+
+    <link rel="stylesheet" href="styles/styles.css">  
 </head>
 <body>
+    
     <header>
         <!-- nav hosting a link tags a -->
         <nav>
@@ -20,11 +25,16 @@
         <!-- h1 tag taking my name -->
         <h1>UDIE STEPHEN UDIE | WDD 130</h1>
         <!-- image tag -->
-        <img src="/images/profile.jpg" alt="Hello, my name is Udie Stephen Udie " width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is Udie Stephen Udie " width="200">
         <!-- first paragragh -->
         <p>My name is Udie Stephen Udie, Am an expert graphics designer and am from Nigeria and am currently Schooling at Brigham Young Uninversity-Idaho where i run my Bachelor Degree Program on Computer Programming. <br> <br>I Am an IT lover, i enjoy designing and coding,i work remotely and onsite and i am open to remote jobs.
         </p>
     </main>
+    <aside>
+        <h2>Nigeria</h2>
+        <img src="images/nigeria.jpg" alt="NIgeria Landscape">
+        <p>Nigeria, country located on the western coast of Africa. Nigeria has a diverse geography, with climates ranging from arid to humid equatorial. However, Nigeria's most diverse feature is its people. Hundreds of languages are spoken in the country, including Yoruba, Igbo, Fula, Hausa, Edo, Ibibio, Tiv, and English.</p>
+    </aside>
     <!-- footer to put information below web page -->
     <footer>
         <p>©2024 | Udie Stephen Udie | Nigeria </p>
