--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <a href="#">Home</a>
             <a href="wwr">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://web.facebook.com/steveudie">facebook</a>
+            <a href="www.linkedin.com/in/udie-stephen-31713a289">linkedin</a>
         </nav>
     </header>
     <!-- main body of page -->
@@ -27,10 +29,20 @@
         <!-- image tag -->
         <img src="images/profile.jpg" alt="Hello, my name is Udie Stephen Udie " width="200">
         <!-- first paragragh -->
-        <p>My name is Udie Stephen Udie, Am an expert graphics designer and am from Nigeria and am currently Schooling at Brigham Young Uninversity-Idaho where i run my Bachelor Degree Program on Computer Programming. <br> <br>I Am an IT lover, i enjoy designing and coding,i work remotely and onsite and i am open to remote jobs.
+        <p>My name is Udie Stephen Udie, Am an expert graphics designer and am from Nigeria and am currently Schooling at Brigham Young Uninversity-Idaho where i run my Bachelor Degree Program on Computer Programming. <br> <br>I Am an IT lover, i enjoy designing and  coding,i work remotely and onsite and i am open to remote jobs, i love eating afang soup at night but bread and tea in the morning, i also hate being broke, hence i dont mind working hard to enable me not to beg anyone for money, in watch word is perseverance, i believe with it, the sky will be my starting point, i normally spend my leisure time watching good movie, am presently watching a seasonal movie called LUCIFA, when ever am tired i dont mind shotting my eyes for a quike rest, which is mostly at night. <br>
+            Educational Endeavors <br>
+            My commitment to education is evident in my numerous initiatives aimed at fostering creativity and critical thinking among students. I have taught courses at various institutions, sharing my expertise in both art and technology. my teaching philosophy emphasizes the importance of interdisciplinary learning, encouraging students to explore the connections between different fields of study.
         </p>
+        <ul class="box">
+            <li><a href="https://newsroom.churchofjesuschrist.org/article/aba-nigeria-temple" target="_blank">aba nigeria template</a></li>
+            <li><a href="https://newsroom.churchofjesuschrist.org/article/accra-ghana-temple" target="_blank">accra ghana template</a></li>
+            <li><a href="https://newsroom.churchofjesuschrist.org/article/adelaide-australia-temple" target="_blank">adelaide australia template</a></li>
+
+
+        </ul>
     </main>
-    <aside>
+  
+    <aside class="box">
         <h2>Nigeria</h2>
         <img src="images/nigeria.jpg" alt="NIgeria Landscape">
         <p>Nigeria, country located on the western coast of Africa. Nigeria has a diverse geography, with climates ranging from arid to humid equatorial. However, Nigeria's most diverse feature is its people. Hundreds of languages are spoken in the country, including Yoruba, Igbo, Fula, Hausa, Edo, Ibibio, Tiv, and English.</p>
@@ -40,5 +52,6 @@
         <p>©2024 | Udie Stephen Udie | Nigeria </p>
     </footer>
 </body>
+<!--29 june 2024 -->
 </html>
 
