--- a/wwr/about us.html
+++ b/wwr/about us.html
@@ -30,7 +30,7 @@
         </div>
         <section>
             <h2>History</h2>
-            <p>Whitewater rafting can be traced back to 1811 when the <br>first recorded attempt to navigate the Snake River in Wyoming was <br> planned. With no training, experience, or proper equipment, the river was found to be too difficult and dangerous. Hence, it was given the nickname "Mad River"....</p>
+            <p>Whitewater rafting can be traced back to 1811 when the <br>first recorded attempt to navigate the Snake River in Wyoming was <br> planned. With no training, experience, or proper equipment, the river was <br> found to be too difficult and dangerous. Hence, it was given the nickname "Mad River"....</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
