--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     
     <header>
         <!-- nav hosting a link tags a -->
-        <nav>
-            <a href="#">Home</a>
+        <nav
+            <a href="#">HOME</a>
             <a href="wwr">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="wwr/aboutus.html">about us</a>
             <a href="https://web.facebook.com/steveudie">facebook</a>
             <a href="www.linkedin.com/in/udie-stephen-31713a289">linkedin</a>
+            
         </nav>
     </header>
     <!-- main body of page -->
