--- a/wwr/aboutus.html
+++ b/wwr/aboutus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.jpg" alt="BYU-I logo">
+        <img src="images/logo.jpg" alt="rafting image">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
