--- a/wwr/aboutus.html
+++ b/wwr/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Rafting Company</title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles.css/rafting.css">
 </head>
 <body>
     <header>
@@ -21,10 +21,10 @@
     
     <main>
         <div class="hero">
-            <img src="images/new.jpg" alt="Rafting Adventure">
+            <img src="images/logo5.jpg" alt="Rafting Adventure">
             <h1>Rafting Company Name</h1>
             <article>
-                <img src="images/logo5.jpg" alt="Happy Client">
+                <img src="images/12.jpg" alt="Happy Client">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec arcu ac massa...</p>
             </article>
         </div>
