--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
             <a href="wwr/aboutus.html">about us</a>
             <a href="https://web.facebook.com/steveudie">facebook</a>
-            <a href="www.linkedin.com/in/udie-stephen-31713a289">linkedin</a>
+            <a href="https://www.linkedin.com/in/udie-stephen-31713a289/">linkedin</a>
             
         </nav>
     </header>
