--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Rafting Company</title>
-    <link rel="stylesheet" href="styles.css/rafting.css"> <!-- Assuming rafting.css is a separate CSS file -->
+    <link rel="stylesheet" href="styles/rafting.css"> <!-- Assuming rafting.css is a separate CSS file -->
 </head>
 <body>
 
