--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Stephen Udie" >      
     <title>UDIE STEPHEN UDIE | WDD 130</title>
 
-    <link rel="stylesheet" href="styles.css/site_plan.css"> 
+    <link rel="stylesheet" href="styles/site_plan.css"> 
 </head>
 <body>
     <h2> Overview :<br>A whitewater rafting business helps customers navigate rough waters by supplying them with the equipment and/or the guides they need to safely head down the river.
