--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="wwr">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
             <a href="wwr/about.html">about us</a>
+            <a href="quiz.html">quiz</a>
             <a href="https://web.facebook.com/steveudie">facebook</a>
             <a href="https://www.linkedin.com/in/udie-stephen-31713a289/">linkedin</a>
             
