--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Rafting Company</title>
-    <link rel="stylesheet" href="contact.css"> <!-- Assuming contact.css is a separate CSS file -->
+    
+    <link rel="stylesheet" href="styles/rafting.css"><!-- Assuming contact.css is a separate CSS file -->
 </head>
 <body>
 
@@ -41,7 +42,7 @@
         </div>
 
         <section>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127201.07864606056!2d8.429019619921888!3d4.934012510824725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1067862eeaabcc29%3A0xa2b8722fb5b0b458!2sCalabar%2C%20Cross%20River!5e0!3m2!1sen!2sng!4v1720990500115!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe id="map"title = "Map of Calabar"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127201.07864606056!2d8.429019619921888!3d4.934012510824725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1067862eeaabcc29%3A0xa2b8722fb5b0b458!2sCalabar%2C%20Cross%20River!5e0!3m2!1sen!2sng!4v1720990500115!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
 
@@ -118,6 +119,7 @@
             </a>
             <a href="https://instagram.com">
                 <img src="images/INSTAGRAM.webp" alt="Instagram">
+                <a href="https://app.moqups.com/9TN5yecgfjn7pNMCIPeUHOrI9Dol6THd/view/page/a33abd1c8">wireframe</a>
             </a>
         </nav>
     </footer>
